# pyrust

./: .gitignore  Cargo.toml  Makefile  README.md  inspect_bindings.py  pyproject.toml
.github/workflows/: ci.yml
crates/pyrust-bindings/: Cargo.toml
crates/pyrust-bindings/src/: cli.rs  lib.rs
crates/pyrust-cli/: Cargo.toml
crates/pyrust-cli/src/: cli.rs  main.rs
crates/pyrust-internal/: Cargo.toml
crates/pyrust-internal/src/: lib.rs  pi.rs
python/pyrust/: __init__.py  __main__.py  _bindings.pyi  cli.py  cpu.py
tests/: test_cli.sh
tests/unit/: test_lib.py
