[project]
name = "pyrust"
description = "Bindings for the pyrust-internal crate"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Eric Egli", email = "43848365+eegli@users.noreply.github.com" },
]
dynamic = ["version"]

[tool.maturin]
manifest-path = "crates/pyrust-bindings/Cargo.toml"
module-name = "pyrust._bindings"
python-source = "python"
strip = true

[project.scripts]
pyrust = "pyrust.__main__:launch_cli"

[dependency-groups]
dev = [
    "maturin>=1.8.1",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.ruff]
line-length = 80
target-version = "py312"
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
# use global line length
docstring-code-line-length = "dynamic"


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
